finalization of the product crud